# aurea

./: .gitignore  CLAUDE.md  README.md  aurea-spec.md  pyproject.toml
.github/workflows/: 1-lint-test.yml  2-build-dist.yml  3-sync-themes.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
aurea/: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml  ruff.toml
aurea/.github/workflows/: 1-lint-test.yml  2-build-dist.yml  3-sync-themes.yml
aurea/.specify/templates/: tasks-template.md
aurea/docs/: agent-commands.md  architecture.md  theme-system.md
aurea/scripts/: import-awesome-designs.py
aurea/specs/001-aurea-cli-toolkit/: data-model.md  plan.md  quickstart.md  tasks.md
aurea/specs/001-aurea-cli-toolkit/checklists/: requirements.md
aurea/specs/001-aurea-cli-toolkit/contracts/: cli-commands.md
aurea/src/aurea/: _log.py  _regex.py  cli.py
aurea/tests/: conftest.py
aurea/tests/fixtures/: sample_slides.md
aurea/tests/integration/: test_build_e2e.py  test_extract_e2e.py  test_serve_e2e.py
aurea/tests/unit/: test_build.py  test_init.py  test_theme.py
docs/: architecture.md
scripts/: import-awesome-designs.py
specs/001-aurea-cli-toolkit/: research.md  spec.md
src/aurea/: __init__.py  _http.py  _tpl.py  cli.py  exceptions.py
src/aurea/commands/: build.py  extract.py  init.py  serve.py  theme.py
src/aurea/themes/: registry.json
tests/fixtures/: expected_output.html
tests/integration/: test_build_e2e.py  test_extract_e2e.py  test_init_e2e.py  test_serve_e2e.py
tests/unit/: test_build.py  test_cli.py  test_extract.py  test_init.py  test_serve.py  test_theme.py
(+162 files in other folders)
